--- a/TSAppClient/nbproject/project.properties
+++ b/TSAppClient/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TSAppClient
 excludes=
+file.reference.bluecove-2.1.1-SNAPSHOT.jar=..\\..\\..\\..\\Downloads\\bluecove-2.1.1-SNAPSHOT.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.bluecove-2.1.1-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
