--- a/TSAppClient/nbproject/project.properties
+++ b/TSAppClient/nbproject/project.properties
@@ -37,13 +37,15 @@ endorsed.classpath=
 excludes=
 file.reference.bluecove-2.1.1-SNAPSHOT.jar=..\\..\\..\\..\\Downloads\\bluecove-2.1.1-SNAPSHOT.jar
 file.reference.bluecove-2.1.1-SNAPSHOT.jar-1=C:\\Users\\gisel\\Downloads\\bluecove-2.1.1-SNAPSHOT.jar
+file.reference.bluecove-2.1.1-SNAPSHOT.jar-2=C:\\Users\\albic\\OneDrive\\Escritorio\\BitalinoDemo\\lib\\bluecove-2.1.1-SNAPSHOT.jar
 file.reference.javax.activation-api-1.2.0.jar=C:\\Users\\gisel\\Downloads\\javax.activation-api-1.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.bluecove-2.1.1-SNAPSHOT.jar}:\
     ${file.reference.bluecove-2.1.1-SNAPSHOT.jar-1}:\
-    ${file.reference.javax.activation-api-1.2.0.jar}
+    ${file.reference.javax.activation-api-1.2.0.jar}:\
+    ${file.reference.bluecove-2.1.1-SNAPSHOT.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
